--- a/plugins/total-time/total-time.css
+++ b/plugins/total-time/total-time.css
@@ -1,5 +1,5 @@
 #total-time-container {
-    opacity: 0.5;
+    opacity: 0.8;
     display: block;
     position: fixed;
     bottom: 10px;
@@ -7,5 +7,6 @@
     padding: 8px;
     z-index: 100000;
     background-color: #fff;
+    color: #333;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 10px 0px;
 }
