--- a/popup/popup.css
+++ b/popup/popup.css
@@ -43,17 +43,17 @@ label {
   cursor: pointer;
 }
 
-label span {
+label div {
   position: relative;
   padding-left: 28px;
 }
 
-label span::before,
-label span::after {
+label div::before,
+label div::after {
   transition: all .075s ease-in-out;
 }
 
-label span::before {
+label div::before {
   content: '';
   position: absolute;
   top: 0;
@@ -66,7 +66,7 @@ label span::before {
   cursor: pointer;
 }
 
-label span::after {
+label div::after {
   content: '';
   position: absolute;
   top: 3px;
@@ -79,12 +79,12 @@ label span::after {
   border-left: 3px solid #fff;
 }
 
-input[type=checkbox]:checked + span::before {
+input[type=checkbox]:checked + div::before {
   border-color: #00836b;
   background-color: #00836b;
 }
 
-input[type=checkbox]:checked + span::after {
+input[type=checkbox]:checked + div::after {
   -ms-transform:rotate(-45deg) scale(1);
   transform:rotate(-45deg) scale(1);
 }
