implement reload after submit

--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -45,6 +45,10 @@ body {
     padding-block-start: 20px;
 }
 
+.form__fallback {
+    height: 320px;
+}
+
 .form__section {
     display: grid;
     gap: 8px;
