refactor user-switcher plugin

--- a/assets/props.css
+++ b/assets/props.css
@@ -7,4 +7,5 @@
     --powerups-color-accent: #2c9a7a;
     --powerups-color-disabled: #e5e5e5;
     --powerups-z-floating: 10;
+    --powerups-z-select: 500;
 }
