--- a/entrypoints/popup/components/Form/index.module.css
+++ b/entrypoints/popup/components/Form/index.module.css
@@ -77,6 +77,7 @@
 	place-items: center;
 	width: 16px;
 	height: 16px;
+	flex-shrink: 0;
 	appearance: none;
 	border: solid 2px #bbb;
 	background-color: var(--powerups-color-white);
