--- a/assets/props.css
+++ b/assets/props.css
@@ -4,8 +4,8 @@
 	--powerups-color-text-weak: #767676;
 	--powerups-color-background: #f0f0f0;
 	--powerups-color-primary: #00836b;
-	--powerups-color-accent: #2c9a7a;
-	--powerups-color-notification: #f42858;
+	--powerups-color-accent: #43ce9f;
+	--powerups-color-badge: #e07b9a;
 	--powerups-color-disabled: #e5e5e5;
 	--powerups-color-border: #c2c2c2;
 	--powerups-color-hover: #fcfade;
