--- a/entrypoints/popup/components/Form/index.module.css
+++ b/entrypoints/popup/components/Form/index.module.css
@@ -3,7 +3,7 @@
 /* === Forms === */
 .form {
 	display: grid;
-	gap: 20px;
+	gap: 8px;
 	padding-block-start: 20px;
 }
 
@@ -36,8 +36,8 @@
 	width: 100%;
 	height: 32px;
 	padding-inline: 16px;
-	background: var(--powerups-color-accent);
-	border: 2px solid var(--powerups-color-accent);
+	background: var(--powerups-color-primary);
+	border: 2px solid var(--powerups-color-primary);
 	border-radius: 4px;
 	font-size: 14px;
 	font-weight: bold;
@@ -46,7 +46,7 @@
 
 	&:hover {
 		background-color: var(--powerups-color-white);
-		color: var(--powerups-color-accent);
+		color: var(--powerups-color-primary);
 	}
 
 	&:disabled {
